--- a/Classification/classification.org
+++ b/Classification/classification.org
@@ -1485,6 +1485,32 @@ rt.write_data('../Data/tm_university_ck_mw.tif',imp.reshape(h,w),GeoT,Proj)
 - F1 = 0.89
 - $\mu$ = 0.8
 
+** Comparison
+*** From cite:fauvel2013advances
+
+#+BEGIN_EXPORT latex
+\begin{center}\scriptsize
+  \begin{tabular}{cccccccccc}
+    \toprule
+    Class  & Spectral &EMP-PCA &EMP-KPCA  & $\mathcal{K}^{30}$ & spec-EMP & DBFE-95\%& WH+MV & EM+MV & HSeg+MV\\
+    \midrule
+    \multicolumn{1}{l}{1. Asphalt}      & 83.7 & 94.2 & \cellcolor{orange} 96.0 & 83.6 & 95.1 & 90.5&  93.6 & 90.1 &  94.8\\
+    \multicolumn{1}{l}{2. Meadow}       & 65.3 & 72.1 & \cellcolor{orange} 97.5 & 77.9 & 72.7 & 85.5&  75.1 & 96.0 &  89.3\\
+    \multicolumn{1}{l}{3. Gravel}       & 68.4 & 45.9 &  81.1 &  82.9 & 60.6 & 51.3  &  66.1 & 82.3 &\cellcolor{orange} 96.1\\
+    \multicolumn{1}{l}{4. Tree}         & 97.9 & 98.8 & \cellcolor{orange} 99.3 & 96.7 & 99.1 & 99.2&  98.6 & 85.5 &  98.1\\
+    \multicolumn{1}{l}{5. Metal Sheet}  & 99.4 & 99.5 &  99.4 & 98.7 & 99.4 & 99.4&   99.9 &\cellcolor{orange} &  99.8\\
+    \multicolumn{1}{l}{6. Bare Soil}    & 92.5 & 52.8 & 92.2 &  95.2 & 82.6 & 83.9 &  97.4  & 96.7 &\cellcolor{orange}  99.8 \\
+    \multicolumn{1}{l}{7. Bitumen}      & 88.9 & 94.8 & \ 98.8 & 94.0 & 96.2 & 93.5&    96.3 & 91.9 & \cellcolor{orange}100\\
+    \multicolumn{1}{l}{8. Brick}        & 92.0 & 94.9 & \cellcolor{orange} 99.4 & 95.0 & 95.8 & 95.5  &   97.9  &  98.4 & 99.3\\
+    \multicolumn{1}{l}{9. Shadow}       & 96.0 & 89.6 & \cellcolor{orange} 98.0 & 97.4 & 92.5 & 94.2  &   97.0 &  97.4  &   96.5\\
+    \midrule
+    OA                                     & 78.2 & 77.7 &\cellcolor{orange} 96.3 & 85.1 & 82.4 & 87.1 &  85.4 & 94.0 &  93.9\\
+    \midrule
+    $\kappa$                               & 0.73 & 0.71 &\cellcolor{orange} 0.95 & 0.81 & 0.77 & 0.83&  0.81 & 0.92 &  0.92\\
+    \bottomrule
+  \end{tabular}
+\end{center}
+#+END_EXPORT
 * References                                                         :export:
 *** Bibliography
   :PROPERTIES:
